--- a/app/index.html
+++ b/app/index.html
@@ -8,7 +8,11 @@
   </head>
   <body>
     <div class="container">
-      <p>Welcome to your life.</p>
+      <header>
+        INTERNAL COMPANY DIRECTORY
+      </header>
+      <div class="users">
+      </div>
     </div>
     <script src="js/bundle.js"></script>
   </body>
