--- a/app/index.html
+++ b/app/index.html
@@ -2,15 +2,17 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>My Cool Project</title>
+    <title>Random User Data</title>
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/main.css">
   </head>
   <body>
     <div class="container">
+
       <header>
-        INTERNAL COMPANY DIRECTORY
+        <h3>Internal Company Directory</h3>
       </header>
+      <h4>Refresh for another set of random users!</h4>
       <div class="users">
       </div>
     </div>
